# StudyBuddy

./: .env  .gitignore  pyproject.toml  requirements.txt  run.py
app/: __init__.py  routes.py  search_engine.py
app/static/css/: style.css
app/templates/: index.html
