[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "study-buddy"
version = "0.1.0"
description = "A study search engine application"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]